[gd_scene load_steps=13 format=3 uid="uid://y231bdkdnpu3"]

[ext_resource type="PackedScene" uid="uid://cgxoetvsqjw5m" path="res://Audio/SFX/FXPlayer.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://xyjo08025xdi" path="res://UI/GameOver.tscn" id="2"]
[ext_resource type="Resource" uid="uid://b6dofhg1xf06q" path="res://Levels/LevelCatalog.tres" id="2_y7ay8"]
[ext_resource type="PackedScene" uid="uid://cojyo2p2tueoc" path="res://World/View/ViewportsContainer.tscn" id="3_soq24"]
[ext_resource type="Theme" uid="uid://bbxmydfgv8ikb" path="res://theme.tres" id="4_av0iw"]
[ext_resource type="Script" path="res://World/Game.gd" id="5"]
[ext_resource type="AudioStream" uid="uid://b64yscmb1ae6h" path="res://Audio/SFX/Death/death_2.wav" id="6"]
[ext_resource type="PackedScene" uid="uid://djl03abvohd5o" path="res://UI/GameEnd.tscn" id="7"]
[ext_resource type="PackedScene" path="res://UI/WaveNumber.tscn" id="8"]
[ext_resource type="AudioStream" uid="uid://dfyljd6u8tlwi" path="res://Audio/SFX/Lightning/lightning_1.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://dprgwe2yu1us4" path="res://Audio/SFX/Lightning/lightning_2.wav" id="10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8dgm0"]
bg_color = Color(0.0784314, 0.223529, 0.203922, 0.572549)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")
level_catalog = ExtResource("2_y7ay8")

[node name="ViewportsContainer" parent="." instance=ExtResource("3_soq24")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Separator" type="Panel" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8dgm0")

[node name="DreamCaughtText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 32.0
grow_horizontal = 2
theme = ExtResource("4_av0iw")
text = "0 dream caught"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="WaveNumber" parent="MarginContainer" instance=ExtResource("8")]
layout_mode = 2
theme = ExtResource("4_av0iw")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOver" parent="." instance=ExtResource("2")]
visible = false
layout_mode = 1

[node name="GameEnd" parent="." instance=ExtResource("7")]
visible = false
layout_mode = 1

[node name="DeathFX" parent="." instance=ExtResource("1")]
process_mode = 2

[node name="DeathFX1" type="AudioStreamPlayer" parent="DeathFX"]
stream = ExtResource("6")
volume_db = -14.135
bus = &"Game Over"

[node name="LightningFX" parent="." instance=ExtResource("1")]

[node name="LightningFX1" type="AudioStreamPlayer" parent="LightningFX"]
stream = ExtResource("9")
volume_db = -9.087
bus = &"SFX"

[node name="LightningFX2" type="AudioStreamPlayer" parent="LightningFX"]
stream = ExtResource("10")
volume_db = -8.078
bus = &"SFX"

[editable path="ViewportsContainer"]
